# LogicVerse

./: .env  .gitignore  README.md  main.py  my_agent.py  ollama_call.py  pyproject.toml  test.py
logicverse/: __init__.py
logicverse/core/: agent.py
logicverse/llms/: base.py  factory.py  openai_llm.py
logicverse/memory/: buffer.py
logicverse/planners/: direct.py  plan.py  react.py
logicverse/skills/: loader.py
logicverse/tools/: registry.py
logicverse/utils/: __init__.py  config.py  parser.py
skills/academic_researcher/: SKILL.md
skills/academic_researcher/scripts/: search_tools.py
srcipts/: init_lv.py
