[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logicverse"
version = "0.0.1"
authors = [
  { name="Wenbin Zuo" }
]
description = "A lightweight, modular, and robust AI Agent framework."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]